--- a/team.html
+++ b/team.html
@@ -106,6 +106,19 @@
       width: 100%;
     }
 
+    /* 本科生部分使用更具体的选择器 */
+    .undergraduate-section .team-grid {
+      display: flex !important;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .undergraduate-section .team-card {
+      max-width: 400px;
+      width: 100%;
+    }
+
     .team-card {
       background-color: white;
       border-radius: var(--card-radius);
@@ -419,11 +432,12 @@
   </section>
 
   <!-- 本科生 -->
-  <section class="team-category">
+  <section class="team-category undergraduate-section" style="padding-top: 100px;">
     <div class="container">
       <div class="category-title">
         <h2>本科生</h2>
       </div>
+
       <div class="team-grid">
         <!-- 本科生1 -->
         <div class="team-card">
@@ -438,8 +452,8 @@
             </div>
           </div>
         </div>
-
       </div>
+    </div>
   </section>
 
   <!-- 加入我们 -->
